--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
     <script>
-        posicaoRandomica()
+        setInterval(function() {
+            posicaoRandomica()
+        }, 1000)
     </script>
 </body>
 </html>
