--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             <img id="v3" src="imagens/coracao_cheio.png">
         </div>
         <div class="cronometro">
-            Tempo restante: ?
+            Tempo restante: <span id="cronometro"></span>
         </div>
     </div>
     <script>
-        setInterval(function() {
+        document.getElementById('cronometro').innerHTML = tempo
+
+        var criaMosca = setInterval(function() {
             posicaoRandomica()
         }, 1000)
     </script>
