--- a/index.html
+++ b/index.html
@@ -6,26 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script src="jogo.js"></script>
+
+    <script>
+        function iniciarJogo() {
+            var nivel = document.getElementById('nivel').value
+
+            if(nivel = '') {
+                alert('Selecione um nível para iniciar o jogo')
+                return false
+            }
+        }
+    </script>
 </head>
-<body onresize="ajustaTamanhoPalcoJogo()">
-    <div class="painel">
-        <div class="vidas">
-            <img id="v1" src="imagens/coracao_cheio.png">
-            <img id="v2" src="imagens/coracao_cheio.png">
-            <img id="v3" src="imagens/coracao_cheio.png">
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-center">
+                    <img src="imagens/game.png">
+                </div>    
+            </div>
         </div>
-        <div class="cronometro">
-            Tempo restante: <span id="cronometro"></span>
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-center">
+                    <div class="mb-2">
+                        <select class="form-control" id="nivel">
+                            <option value="">-- Selecione o nível --</option>
+                            <option value="normal">Normal</option>
+                            <option value="dificil">Difícil</option>
+                            <option value="chucknorris">Chuck Norris</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-center">
+                    <button type="button" class="btn btn-danger btn-lg" onclick="iniciarJogo()">Iniciar Jogo</button>
+                </div>    
+            </div>
         </div>
     </div>
-    <script>
-        document.getElementById('cronometro').innerHTML = tempo
-
-        var criaMosca = setInterval(function() {
-            posicaoRandomica()
-        }, 1000)
-    </script>
 </body>
 </html>
