--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         function iniciarJogo() {
             var nivel = document.getElementById('nivel').value
 
-            if(nivel = '') {
+            if(nivel === '') {
                 alert('Selecione um nível para iniciar o jogo')
                 return false
             }
+            
+            window.location.href = "app.html?" + nivel
         }
     </script>
 </head>
