--- a/app.html
+++ b/app.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt=br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jogo</title>
 
     <link rel="stylesheet" href="style.css">
     <script src="jogo.js"></script>
@@ -21,6 +21,7 @@
         </div>
     </div>
     <script>
+        // alteração dinâmica da var tempo
         document.getElementById('cronometro').innerHTML = tempo
 
         var criaMosca = setInterval(function() {
